Rearrange OrderController